# front/src/api/index.ts
@@ -10,10 +10,11 @@ export { CancelablePromise, CancelError } from './core/CancelablePromise';
 export { OpenAPI } from './core/OpenAPI';
 export type { OpenAPIConfig } from './core/OpenAPI';
 
+export type { DocumentDto } from './models/DocumentDto';
 export type { LoginRequestDto } from './models/LoginRequestDto';
 export type { MyAccountInfoDto } from './models/MyAccountInfoDto';
 
 export { AccountService } from './services/AccountService';
 export { AuthService } from './services/AuthService';
+export { DocumentsService } from './services/DocumentsService';
 export { HealthService } from './services/HealthService';
-export { ProjectService } from './services/ProjectService';
