# server/Tuna.Model/Services/Documents/IDocumentsRepository.cs
@@ -6,5 +6,7 @@ public interface IDocumentsRepository
 {
 	Task<DocumentDto?> TryGet(Guid documentId);
 
+	Task<DocumentDto[]> SearchByAuthorId(Guid authorId);
+
 	Task Create(DocumentDto dto);
 }
